--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Converts PowerMate input to MIDI. Sits in Mac menubar.",
   "main": "index.js",
   "scripts": {
-    "compile": "npm install && ./node_modules/.bin/electron-rebuild .",
+    "postinstall": "./node_modules/.bin/electron-rebuild .",
     "start": "electron .",
     "build": "rm -rf ./release-builds/powermate2midi-darwin-x64/ && electron-packager . powermate2midi --icon=powermate-128.icns --out=release-builds"
   },
@@ -13,10 +13,10 @@
   "dependencies": {
     "auto-launch": "^5.0.1",
     "menubar": "^5.2.3",
-    "midi": "^0.9.5",
+    "midi": "git+https://github.com/justinlatimer/node-midi.git",
     "node-hid": "^0.5.4",
     "node-osc": "^2.1.0",
-    "node-powermate": "0.0.5"
+    "node-powermate": "git+https://github.com/brnndnn/node-powermate.git"
   },
   "devDependencies": {
     "electron": "^1.6.11",
